--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,26 @@
-aiogram
-environs
+aiogram==2.25.1
+aiohttp==3.8.4
+aiosignal==1.3.1
+async-timeout==4.0.2
+attrs==23.1.0
+Babel==2.9.1
+beautifulsoup4==4.12.2
+bs4==0.0.1
+certifi==2023.5.7
+charset-normalizer==3.2.0
+environs==9.5.0
+frozenlist==1.3.3
+greenlet==2.0.2
+idna==3.4
+magic-filter==1.0.9
+marshmallow==3.19.0
+multidict==6.0.4
+packaging==23.1
+python-dotenv==1.0.0
+pytz==2023.3
+requests==2.31.0
+soupsieve==2.4.1
+SQLAlchemy==2.0.18
+typing_extensions==4.7.1
+urllib3==2.0.3
+yarl==1.9.2
