--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+about-time==4.2.1
 aiogram==2.25.1
 aiohttp==3.8.4
 aiosignal==1.3.1
+alembic==1.12.0
+alive-progress==3.1.4
+annotated-types==0.5.0
+anyio==3.7.1
 async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.9.1
@@ -8,19 +13,35 @@ beautifulsoup4==4.12.2
 bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.2.0
+click==8.1.7
 environs==9.5.0
+fastapi==0.103.1
 frozenlist==1.3.3
+grapheme==0.6.0
 greenlet==2.0.2
+h11==0.14.0
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
 magic-filter==1.0.9
+Mako==1.2.4
+MarkupSafe==2.1.3
 marshmallow==3.19.0
 multidict==6.0.4
 packaging==23.1
+progress==1.6
+pydantic==2.3.0
+pydantic_core==2.6.3
 python-dotenv==1.0.0
+python-multipart==0.0.6
 pytz==2023.3
 requests==2.31.0
+sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.18
+starlette
+starlette-admin==0.11.2
 typing_extensions==4.7.1
 urllib3==2.0.3
+uvicorn==0.23.2
 yarl==1.9.2
