--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ alembic==1.12.0
 alive-progress==3.1.4
 annotated-types==0.5.0
 anyio==3.7.1
+apache-libcloud==3.8.0
 async-timeout==4.0.2
 attrs==23.1.0
 Babel==2.9.1
@@ -14,34 +15,54 @@ bs4==0.0.1
 certifi==2023.5.7
 charset-normalizer==3.2.0
 click==8.1.7
+dnspython==2.6.1
+email_validator==2.2.0
 environs==9.5.0
-fastapi==0.103.1
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fasteners==0.19
 frozenlist==1.3.3
 grapheme==0.6.0
 greenlet==2.0.2
 h11==0.14.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 magic-filter==1.0.9
 Mako==1.2.4
+markdown-it-py==3.0.0
 MarkupSafe==2.1.3
 marshmallow==3.19.0
+mdurl==0.1.2
 multidict==6.0.4
+orjson==3.10.5
 packaging==23.1
 progress==1.6
 pydantic==2.3.0
 pydantic_core==2.6.3
+Pygments==2.18.0
 python-dotenv==1.0.0
-python-multipart==0.0.6
+python-multipart==0.0.9
 pytz==2023.3
+PyYAML==6.0.1
 requests==2.31.0
+rich==13.7.1
+shellingham==1.5.4
 sniffio==1.3.0
 soupsieve==2.4.1
 SQLAlchemy==2.0.18
-starlette
-starlette-admin==0.11.2
-typing_extensions==4.7.1
+sqlalchemy-file==0.6.0
+starlette==0.37.2
+starlette-admin==0.14.0
+typer==0.12.3
+typing_extensions==4.12.2
+ujson==5.10.0
 urllib3==2.0.3
 uvicorn==0.23.2
+uvloop==0.19.0
+watchfiles==0.22.0
+websockets==12.0
 yarl==1.9.2
